# adk-test

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  test-wiki.py
.github/workflows/: secret-scan.yml
adk_test/: __init__.py  agent.py
agents/extractor/: agent.py
agents/rag/: README.md  agent.py  prompts.py
agents/rag/shared_libraries/: corpus_store.py  delete_corpus.py  prepare_corpus_and_data.py
agents/voice/: Dockerfile  README.md  agent.py
agents/voice/k8s/: README.md  deployment.yaml  kind-cluster-demo.yaml  kind-cluster.yaml
agents/weather/: agent.py
agents/wiki/: Dockerfile  README.md  agent.py  discover_agent.py  root_agent.py
agents/wiki/k8s/: README.md  deployment.yaml  kind-cluster.yaml
agents/wiki/shared/: get_wikipedia_article.py
samples/: test-discover.py  test-fetch.py  test-wiki.py
tools/: discover_wikipedia_candidates.py  get_wikipedia_article.py
wiki_agent/: agent.py
wiki_agent/.adk/: session.db
wiki_agents/: agent.py  discover_agent.py  root_agent.py
