[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-test"
version = "0.1.0"
description = "Minimal Google ADK starter app for local experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["google-adk==2.1.0"]

[tool.setuptools.packages.find]
include = ["adk_test*"]
